--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,7 @@
   "version": "1.0",
   "description": "Alerts when watching non-educational YouTube videos outside allowed hours.",
   "permissions": ["tabs", "notifications", "tts"],
+  "host_permissions": ["http://localhost:8000/*"],
   "background": {
     "service_worker": "background.js"
   },
