deploying the ext only when it finds /watch or /embed

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://www.youtube.com/*"],
+      "matches": ["*://www.youtube.com/embed/*", 
+                  "*://www.youtube.com/watch*"],
       "js": ["content.js"]
     }
   ],
