--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,9 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://www.youtube.com/embed/*", 
-                  "*://www.youtube.com/watch*"],
-      "js": ["content.js"]
+      "matches": ["*://www.youtube.com/*"],
+      "js": ["content.js"],
+      "run_at": "document_idle"
     }
   ],
   "icons": {
